Add unit tests and increase test coverage.